--- a/Web Final/main.css
+++ b/Web Final/main.css
@@ -2,6 +2,10 @@
 body, html {
   margin: 0;
   padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+
   background-image: linear-gradient( #F64747, #9B59B6);
 }
 @font-face {
